fix: the button after pseudo-element was covering the whole screen

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1118,6 +1118,7 @@ pre {
 
 button,
 .button {
+  position: relative;
   outline: none;
 
   @each $name, $pair in utilities.$colors {
